--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@
   --radius-S:1rem;
 
   /* Shadows */
-  --level-1 : box-shadow: 0px 2px 10px 0px #1901341F;
+  --level-1 : 0px 2px 10px 0px #1901341F;
   --level-2 : 0px 4px 10px 0px #19013429;
 }
 
@@ -275,7 +275,6 @@ button, .primary-button{
 }
 #logo img {
   max-height: 15vh;
-  background-image: transparent;
   width: auto;
   margin: 4px;
 }
@@ -404,7 +403,7 @@ label {
   list-style:none;
   width:10vw;
   border: 1px solid black;
-  background-color: var(---secondary-light);
+  background-color: var(--secondary-light);
 }
 .questionTokens li {
   width: 100%;
@@ -579,7 +578,6 @@ footer {
 }
 #footer p {
   text-align:left;
-  align-items: left;
   margin: auto auto auto 2%;
   color: beige;
 }
@@ -672,10 +670,6 @@ footer {
     margin: 1%;
   }
   #logo img {
-    /* height: 10vh; */
-    /* margin: 3%;
-    padding: 2%; */
-    background-image: transparent;
     width: initial;
   }
   #logoSmall {
