--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,11 @@
   --font-family: 'Poppins', sans-serif;
 
   /* Font-Size */
-  --XL : 2vh;
-  --L: 1.5vh;
-  --M: 1.25vh;
-  --S: 1vh;
-  --XS: 0.75vh;
+  --XL : clamp(2rem, 3.5vw, 4rem);;
+  --L: clamp(1.25rem, 3vw, 2.25rem);
+  --M: clamp(1.25rem, 2vw, 2.25rem);
+  --S: clamp(1rem, 1.5vw, 2rem);
+  --XS: 0.75em;
 
   /* Font-Weight */
   --black : 900;
@@ -333,7 +333,7 @@ label {
     width: 100%;
     border-radius: var(--radius-S);
     padding: 20px;
-    font-size:var(--L);
+    /* font-size:var(--L); */
     font-weight: var(--extra-bold);
 }
 .quizzTheme {
@@ -357,13 +357,13 @@ label {
   margin: 4vh auto;
 }
 .quizzTheme:nth-child(1) {
-  background-image: url("/assets/logoquizz1.png");
+  background-image: url("./assets/logoquizz1.png");
 }
 .quizzTheme:nth-child(2) {
-  background-image: url("/assets/logoquizz2.png");
+  background-image: url("./assets/logoquizz2.png");
 }
 .quizzTheme:nth-child(3) {
-  background-image: url("/assets/logoquizz3.png");
+  background-image: url("./assets/logoquizz3.png");
 }
 
 /*///////////////////
@@ -373,12 +373,12 @@ label {
   background-color: var(--primary-background);
 }
 .quizFlexContainer h1 {
-  font-size: clamp(1.25rem, 3vw, 2rem);
+  font-size: var(--L);
   color: var(--text-light);
   text-align: center;
 }
 .questionTitle {
-  height:10vh;
+  /* height:10vh; */
   margin:auto 2vh;
 }
 .questionTokens {
@@ -414,10 +414,11 @@ li.wrongToken {
 }
 .testContainer {
   /* height: 75vh; */
-  display:flex;
+  display: flex;
   flex-direction: column;
   width: -webkit-fill-available;
-  margin:5%;
+  justify-content: space-around;
+  margin: 5%;
 }
 .quizFlexContainer .neonButton {
   height:10vh;
@@ -431,8 +432,9 @@ li.wrongToken {
   justify-content: center;
   margin: 30px auto;
 }
+
 .card {
-  height: 88vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -441,6 +443,7 @@ li.wrongToken {
 }
 .answer-container {
   width: 100%;
+  /* padding:2%; */
   display: flex;
   flex-direction: column;
   margin:auto;
@@ -448,10 +451,10 @@ li.wrongToken {
   align-items: center;
 }
 button.cardButton {
-  height: 10vh;
+  height: auto;
   /* background-color: var(--primary-background); */
   box-shadow: var(--level-2);
-  color:var(--cardglow-color);
+  color: var(--cardglow-color);
   border-radius: var(--radius-M);
   width: 80%;
   margin: 1vh auto;
@@ -575,13 +578,13 @@ footer {
   nav>.neonButton {
     padding: 1em 3em;
   }
-  #welcome h1 {
+  /* #welcome h1 {
     font-size: 3vh;
-  }
-  #welcome p {
+  } */
+  /* #welcome p {
     font-size: 1.5vh;
     font-weight: var(--bold);
-  }
+  } */
   .questionTokens {
     display:flex;
     flex-direction:row;
@@ -593,8 +596,8 @@ footer {
     flex-direction: column;
   }
   .answer-container {
-    width: 90%;
-    height:80%;
+    /* width: 90%;
+    height:80%; */
     margin: auto;
     display: grid;
     grid-template-columns: repeat(2,1fr);
